Commit Hands-on Exercise 9a

--- a/Hands-on_Ex/Hands-on_Ex09/Hands-on_Ex09a.qmd
+++ b/Hands-on_Ex/Hands-on_Ex09/Hands-on_Ex09a.qmd
@@ -1,13 +1,22 @@
 ---
 title: "Hands-on Exercise 9a: Processing and Visualising Flow Data"
+title-block-banner: true
 date: "08 September 2024"
 date-modified: "last-modified"
-format: html
-execute:
-  echo: true #all the codes will appear
-  eval: true #all the codes will run
-  warning: false #dont display if there are any warnings
+toc: true
+toc-depth: 4
 editor: visual
+execute: 
+  freeze: true #never re-render during project render
+  echo: true #if false, displays charts without codes
+  eval: true #if false, displays codes without charts
+  warning: false #dont display if there are any warnings
+format: 
+  html:
+    code-fold: false
+    code-overflow: scroll
+    code-summary: "Show the code"
+    code-line-numbers: false
 ---
 
 ![](images/placeholder_9a.PNG){fig-align="center"}
@@ -52,15 +61,23 @@ In this hands-on exercise, we will learn how to build an OD matrix by using *Pas
 ::: panel-tabset
 ## Packages
 
++-------------------------------------------------------------------------------------------------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------+
 | Package                                                                                                                                   | Usage                                                                                                                 |
-|-------------------------------------------------------------------------------------------------------------------------------------------|-----------------------------------------------------------------------------------------------------------------------|
++===========================================================================================================================================+=======================================================================================================================+
 | [**sf**](https://cran.r-project.org/web/packages/sf/index.html)                                                                           | For importing, integrating, processing and transforming geospatial data                                               |
++-------------------------------------------------------------------------------------------------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------+
 | [**tmap**](https://cran.r-project.org/web/packages/tmap/)                                                                                 | Choropleth mapping; thematic maps                                                                                     |
++-------------------------------------------------------------------------------------------------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------+
 | [**stplanr**](https://docs.ropensci.org/stplanr/)                                                                                         | For sustainable transport planning; provides functions and tools for analysis and visualisation of transport projects |
++-------------------------------------------------------------------------------------------------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------+
 | [**performance**](https://easystats.github.io/performance/)                                                                               | For model performance measurement                                                                                     |
++-------------------------------------------------------------------------------------------------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------+
 | [**ggpubr**](https://rpkgs.datanovia.com/ggpubr/)                                                                                         | For visualisation                                                                                                     |
++-------------------------------------------------------------------------------------------------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------+
 | [**tidyverse**](https://www.tidyverse.org/)                                                                                               | For importing, integrating, wrangling and visualising data                                                            |
++-------------------------------------------------------------------------------------------------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------+
 | [**DT**](https://rstudio.github.io/DT/), [**knitr**](https://yihui.org/knitr/), [**kableExtra**](https://haozhu233.github.io/kableExtra/) | For building tables                                                                                                   |
++-------------------------------------------------------------------------------------------------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------+
 
 : {tbl-colwidths="\[20,80\]"}
 
@@ -80,33 +97,33 @@ pacman::p_load(sf, tmap,
 
 ## 3.1 Aspatial
 
-+------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+-----------------------+
-| Step | Description                                                                                                                                                                                                                                                                             | Screenshot            |
-+======+=========================================================================================================================================================================================================================================================================================+=======================+
-| 1\.  | Under Dynamic Datasets of the LTA DataMall, click on '*Request API Access*'. Fill up the request accordingly.                                                                                                                                                                           | ![](images/step0.PNG) |
-+------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+-----------------------+
-| 2\.  | Follow instructions from [LTA DataMall API User Guide](https://datamall.lta.gov.sg/content/dam/datamall/datasets/LTA_DataMall_API_User_Guide.pdf) to download and install Postman. Launch Postman app once completed.                                                                   | ![](images/step1.PNG) |
-+------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+-----------------------+
-| 2\.  | From [LTA DataMall API User Guide & Documentation](https://datamall.lta.gov.sg/content/dam/datamall/datasets/LTA_DataMall_API_User_Guide.pdf?ref=stuartbreckenridge.net), search for ***Passenger Volume by Origin Destination Bus Stops***. Copy the URL indicated in the table.       | ![](images/step2.PNG) |
-+------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+-----------------------+
-| 3\.  | In the Postman app, paste URL copied in the field beside 'GET'. Under '*Params*' tab, enter the following details:                                                                                                                                                                      | ![](images/step3.PNG) |
-|      |                                                                                                                                                                                                                                                                                         |                       |
-|      | -   Key: Date                                                                                                                                                                                                                                                                           |                       |
-|      |                                                                                                                                                                                                                                                                                         |                       |
-|      | -   Value: 202407, or whichever YYYYMM you are looking for. Do note that the passenger volume for previous month data will be generated by the 15th of every month, and only files up to the last 3 months is available. For our exercise, Jul 2024 will be the latest file we can use. |                       |
-+------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+-----------------------+
-| 4\.  | Under '*Headers*', enter the following details:                                                                                                                                                                                                                                         | ![](images/step4.PNG) |
-|      |                                                                                                                                                                                                                                                                                         |                       |
-|      | -   Key: AccountKey                                                                                                                                                                                                                                                                     |                       |
-|      |                                                                                                                                                                                                                                                                                         |                       |
-|      | -   Value: This is the API Account Key that can be found from the **LTA DataMall Welcome Email** when you applied for API access.                                                                                                                                                       |                       |
-|      |                                                                                                                                                                                                                                                                                         |                       |
-|      | Click 'Send'.                                                                                                                                                                                                                                                                           |                       |
-+------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+-----------------------+
-| 5\.  | A URL will be generated.                                                                                                                                                                                                                                                                | ![](images/step5.PNG) |
-|      |                                                                                                                                                                                                                                                                                         |                       |
-|      | Press *Ctrl + Click* to download the dataset. This will be in a .zip file format.                                                                                                                                                                                                       |                       |
-+------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+-----------------------+
++-------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+-----------------------+
+| Step  | Description                                                                                                                                                                                                                                                                             | Screenshot            |
++=======+=========================================================================================================================================================================================================================================================================================+=======================+
+| 1\.   | Under Dynamic Datasets of the LTA DataMall, click on '*Request API Access*'. Fill up the request accordingly.                                                                                                                                                                           | ![](images/step0.PNG) |
++-------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+-----------------------+
+| 2\.   | Follow instructions from [LTA DataMall API User Guide](https://datamall.lta.gov.sg/content/dam/datamall/datasets/LTA_DataMall_API_User_Guide.pdf) to download and install Postman. Launch Postman app once completed.                                                                   | ![](images/step1.PNG) |
++-------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+-----------------------+
+| 2\.   | From [LTA DataMall API User Guide & Documentation](https://datamall.lta.gov.sg/content/dam/datamall/datasets/LTA_DataMall_API_User_Guide.pdf?ref=stuartbreckenridge.net), search for ***Passenger Volume by Origin Destination Bus Stops***. Copy the URL indicated in the table.       | ![](images/step2.PNG) |
++-------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+-----------------------+
+| 3\.   | In the Postman app, paste URL copied in the field beside 'GET'. Under '*Params*' tab, enter the following details:                                                                                                                                                                      | ![](images/step3.PNG) |
+|       |                                                                                                                                                                                                                                                                                         |                       |
+|       | -   Key: Date                                                                                                                                                                                                                                                                           |                       |
+|       |                                                                                                                                                                                                                                                                                         |                       |
+|       | -   Value: 202407, or whichever YYYYMM you are looking for. Do note that the passenger volume for previous month data will be generated by the 15th of every month, and only files up to the last 3 months is available. For our exercise, Jul 2024 will be the latest file we can use. |                       |
++-------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+-----------------------+
+| 4\.   | Under '*Headers*', enter the following details:                                                                                                                                                                                                                                         | ![](images/step4.PNG) |
+|       |                                                                                                                                                                                                                                                                                         |                       |
+|       | -   Key: AccountKey                                                                                                                                                                                                                                                                     |                       |
+|       |                                                                                                                                                                                                                                                                                         |                       |
+|       | -   Value: This is the API Account Key that can be found from the **LTA DataMall Welcome Email** when you applied for API access.                                                                                                                                                       |                       |
+|       |                                                                                                                                                                                                                                                                                         |                       |
+|       | Click 'Send'.                                                                                                                                                                                                                                                                           |                       |
++-------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+-----------------------+
+| 5\.   | A URL will be generated.                                                                                                                                                                                                                                                                | ![](images/step5.PNG) |
+|       |                                                                                                                                                                                                                                                                                         |                       |
+|       | Press *Ctrl + Click* to download the dataset. This will be in a .zip file format.                                                                                                                                                                                                       |                       |
++-------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+-----------------------+
 
 : {tbl-colwidths="\[5,35,60\]"}
 
